# OOP4

./: Array.h  CMakeLists.txt  Figure.h  Figures.cpp  Figures.h  Point.h  main.cpp
